syntax = "proto3";

package builder;

import "pkg/builder/proto/bundle.proto";
import "google/protobuf/any.proto";

// message BuildFile {
//     repeated BuildRuleConfig rules = 1;
// }

// message BuildRuleConfig {
//     string function_name = 1;
//     google.protobuf.Any attributes = 2;
// }

message GroupAttrs {
    string name = 1;
    repeated string deps = 2;
}

message RustBinaryAttrs {
    string name = 1;
    repeated string deps = 2;

    string bin = 5;
    string profile = 3;
    string target = 4;
    RustCompiler compiler = 6;
    bool no_default_features = 7;
    repeated string cfg = 8;
    string rustflags = 9;
    repeated EnvironmentVariable env = 10;
}

message EnvironmentVariable {
    string key = 1;
    string value = 2;
}

enum RustCompiler {
    UNKNOWN = 0;
    CARGO = 1;
    CROSS = 2;
}

message FileGroupAttrs {
    string name = 1;
    repeated string srcs = 3;
}

message BundleAttrs {
    string name = 1;

    repeated string deps = 2;

    repeated string configs = 4;

    reserved 3;
}

message WebpackAttrs {
    // This create a javascript bundle named '[name].js'
    string name = 1;

    repeated string deps = 2;

    // Relative path to the entry point js file.
    string entry = 3;
}

message LocalBinaryAttrs {
    string name = 1;
    repeated string deps = 2;
}

message ProtoDataAttrs {
    string name = 1;

    // Path to a textproto file containing the protobuf data.
    string src = 2;

    // Proto libraries which are required in order to parse this proto.
    repeated string deps = 3;
}

// Runs a command 
message GenRule {
    string name = 1;
    repeated string outs = 2;
    repeated string args = 3;
}