syntax = "proto3";

package builder;

import "pkg/builder/src/proto/bundle.proto";
import "third_party/google/src/proto/any.proto";

message BuildConfig {
    string name = 1;

    Platform platform = 2;

    // Default values of attributes for rule attributes.
    // Any overrides in individual rule calls are proto merged into these defaults.
    repeated google.protobuf.Any rule_defaults = 3;

    // Platform

    // This also declares a bundle variant?
}

// message CortexMCPUConfig {

//     MemoryRange flash = 1;

//     MemoryRange ram = 2;


// }
